# public_files

./: .gitignore  ReleaseManager.spec  Taskfile.yml  app.py  pyproject.toml  set_version.py
jpk_xml/1.7.1/: config.ini
jpk_xml/1.8.0/: config.ini
