[project]
name = "repo-with-public-files"
version = "1.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyinstaller>=6.19.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
